# algorithm

NDKDemo/app/src/main/jni/: Hello.c
RetrofitExample/RetrofitLibrary/: build.gradle
TestJNI/app/: build.gradle
TestJNI/app/src/main/: AndroidManifest.xml
TestJNI/app/src/main/cpp/: AVLTree.hpp  ArrayList.cpp  ArrayList.h  ArrayList.hpp  ArrayQueue.hpp  ArrayStack.hpp  ArrayUtil.cpp  BSTree.hpp  BitmapMatUtil.cpp  BitmapMatUtil.h  CMakeCache.txt  CMakeLists.txt  HuffmanTree.cpp  HuffmanTree.h  LeeCode.cpp  LeeCode.h  LinkStack.hpp  LinkedList.hpp  PriorityQueue.hpp  RandomUtil.cpp  SortUtils.cpp  SortUtils.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  TreeNode.hpp  cardocr.cpp  cardocr.h  map2.hpp  md5.cpp  native-lib.cpp  pQueue.cpp  pQueue.h
TestJNI/app/src/main/cpp/jni/arm64-v8a/: CMakeLists.txt
TestJNI/app/src/main/cpp/jni/armeabi-v7a/: CMakeLists.txt
TestJNI/app/src/main/cpp/jni/include/opencv2/: calib3d.hpp  highgui.hpp  imgproc.hpp  photo.hpp  videoio.hpp
TestJNI/app/src/main/cpp/jni/include/opencv2/core/: core_c.h  cuda.hpp  opengl.hpp  persistence.hpp  types_c.h
TestJNI/app/src/main/cpp/jni/include/opencv2/dnn/: dnn.hpp
TestJNI/app/src/main/cpp/jni/include/opencv2/flann/: lsh_table.h
TestJNI/app/src/main/cpp/jni/include/opencv2/gapi/: core.hpp  garray.hpp  gkernel.hpp  imgproc.hpp
TestJNI/app/src/main/cpp/jni/include/opencv2/stitching/: warpers.hpp
TestJNI/app/src/main/cpp/jni/include/opencv2/stitching/detail/: warpers.hpp
TestJNI/app/src/main/cpp/jni/include/opencv2/videoio/legacy/: constants_c.h
TestJNI/app/src/main/jni/: com_example_testjni_VideoCompress.h  com_example_testjni_VideoCompress_CompressCallback.h
TestJNI/gradle/wrapper/: gradle-wrapper.properties
com.atguigu.springcloud/com.atguigu.springcloud/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-api-commons/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-config-center-3344/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-config-client-3355/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-consumer-feign-hystrix-order80/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-consumer-feign-order80/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-consumer-hystrix-dashboard9001/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-consumer-order80/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-consumer-zkorder80/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-eureka-server7001/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-eureka-server7002/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-gateway-gateway9527/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-provider-hystrix-payment8001/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-provider-payment8001/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-provider-payment8002/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-provider-payment8004/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-providerconsul-payment8006/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-stream-rabbitmq-consumer8802/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-stream-rabbitmq-consumer8803/: pom.xml
com.atguigu.springcloud/com.atguigu.springcloud/cloud-stream-rabbitmq-provider8801/: pom.xml
src/com/bingyy9/: Main.java
(+70 files in other folders)
